--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: python
 python:
   - 3.8.6
 install:
-  - pip install -q -r requirements-dev.txt codecov
+  - pip install -q pipenv codecov
+  - pipenv sync --dev
 script:
-  - flake8
-  - pytest --cov=victorbaptistalemos_libpythonpro
+  - pipenv run flake8
+  - pipenv run pytest --cov=victorbaptistalemos_libpythonpro
 after_success:
   - codecov
